# chess-engine

./: .gitignore  CMakeLists.txt  ChessGame.cpp  ChessGame.h  Constants.cpp  Constants.h  MoveGenerator.cpp  MoveGenerator.h  MoveGeneratorTest.cpp  Position.cpp  Position.h  PositionTest.cpp  README.md  Utils.cpp  Utils.h
Bots/: Bots.cpp  Bots.h
ChessGame/: ChessGame.cpp  ChessGame.h  ChessGameTests.cpp
GUI/: CMakeLists.txt  main.cpp
MoveGenerator/: MoveGenerator.cpp  MoveGenerator.h  MoveGeneratorKing.cpp  MoveGeneratorKnights.cpp  MoveGeneratorMagic.cpp  MoveGeneratorPawns.cpp  MoveGeneratorSliders.cpp  MoveGeneratorTests.cpp
Position/: Position.cpp  Position.h  PositionAccessing.cpp  PositionFenParser.cpp  PositionHashing.cpp  PositionMove.cpp  PositionTests.cpp
